weather-platform/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: weather-app
  namespace: weather
  labels:
    app: weather-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: weather-app

  template:
    metadata:
      labels:
        app: weather-app

    spec:
      containers:
      - name: weather-app

        image: ghcr.io/Hiteshv253/devops-mastery/weather-platform:latest
        imagePullPolicy: Always

        ports:
        - containerPort: 8000
          name: http

        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"

        livenessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3

        readinessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 3

        startupProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 30
