weather-platform/k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: weather-service
  namespace: weather

spec:

  selector:
    app: weather-app

  ports:

  - port: 80
    targetPort: 8000

  type: ClusterIP
